# Checkers

./: ChangeLog.md  Checkers.cabal  LICENSE  README.md
client/: Main.hs
saves/: 1.pdn  1571543380.pdn  1571603508.pdn
server/: Main.hs
src/: Game.hs  Graphic.hs  Parser.hs  Preparation.hs
