name:                 Checkers
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               KristinaMihajlenko
maintainer:           34263871+KristinaMihajlenko@users.noreply.github.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  exposed-modules:
      Game
    , Graphic
    , Parser
    , Preparation
  hs-source-dirs: src
  build-depends:          base >= 4.9 && < 5.0
                          , binary
                          , containers
                          , gloss
                          , MissingH
                          , network
                          , parsec
  default-language:     Haskell2010

executable client
  main-is:              Main.hs
  build-depends:          base >= 4.9 && < 5.0
                        , binary
                        , Checkers
                        , network
  hs-source-dirs:       client
  default-language:     Haskell2010

executable server
  main-is:              Main.hs
  build-depends:        base >= 4.9 && < 5.0
                      , async
                      , binary
                      , Checkers
                      , containers
                      , directory
                      , network
                      , old-time
  hs-source-dirs:       server
  default-language:     Haskell2010
